--- a/style.css
+++ b/style.css
@@ -1,25 +1,92 @@
-/* body{
+body{
     display: flex;
-    justify-content:space-around;
-    flex-wrap: wrap;
-    padding: 10px;
-    margin: 50px;
-    background-color: rgb(23, 23, 37);
-    border: 2px solid red;
-    text-align: center;
-    padding: 0px;
-    margin: 0px;
+    flex-direction: column;
+    justify-content: center;
+    justify-content:space-around; 
+    background-color: rgb(7, 7, 58);
 }
 
 .container{
     display: flex;
-    justify-content: center;
-    border: 1px solid red;
+    justify-content:center;
+}
+.watch{
+    box-shadow: 5px 5px 10px #000000;
+    margin-top: 15rem;
+    display: block;  
+}
+
+
+#time{
+    text-align: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    color: rgb(248, 248, 248);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 5rem;
 }
 
 .button{
+    background-color: rgb(87, 141, 189);
+    border-radius: 100px;
+    padding: 1rem;
     display: flex;
     justify-content: center;
-    border: 1px solid red;
-} */
+    justify-content: space-evenly;
+    margin-top: 10rem;
+}
+#start{
+    border: none;
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    font-size: 20px;
+    background-color: rgba(255, 255, 255,0);
+    background-image: url("./play.png");
+    background-size: cover;
+    transition: transform 0.1s linear;
+}
+#start:hover{
+    transform: scale(1.25) ;
+}
+#stop{
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 16px;
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgba(255, 255, 255,0);
+    background-image: url("./pause.png");
+    background-size: cover;
+    transition: transform 0.2s linear;
+}
+#stop:hover{
+    transform: scale(1.2) ;
+
+}
+#reset{
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 16px;
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    transition: transform 0.2s linear;
+    background-color: rgba(255, 255, 255,0);
+    background-image: url("./undo.png");
+    background-size: cover;
+}
+#reset:hover{
+    transform: scale(1.2) ;
+
+}
+
+
 
